fix: Page Title wrapping and centering

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1070,3 +1070,9 @@ body.full-width {
 		}
 	}
 }
+
+// utilities
+
+.whitespace-nowrap {
+	white-space: nowrap;
+}
